--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
 
 /* card section  */
 
-.cards {
+.cards-aboutus {
     width: 100%;
     display: flex;
     align-items: start;
@@ -77,7 +77,7 @@
     background-color: #F6F8FC;
 }
 
-.cards .card-con {
+.cards-aboutus .cards-aboutus-container {
     width: 50%;
     border-radius: 20px;
     overflow: hidden;
@@ -86,28 +86,28 @@
     border-bottom: 1px solid #E1E9F4;
 }
 
-.cards .mission-card {
+.cards-aboutus .mission-card {
     padding-bottom: 75px;
 }
 
-.cards .card-con .img-2,
-.cards .card-con .img-3 {
+.cards-aboutus .cards-aboutus-container .img-2,
+.cards-aboutus .cards-aboutus-container .img-3 {
     width: 100%;
     /* height: 100%; */
 }
 
-.card-con .card-text {
+.cards-aboutus-container .cards-aboutus-text {
     padding: 20px;
 }
 
-.card-con .card-text .card-head {
+.cards-aboutus-container .cards-aboutus-text .card-aboutus-head {
     font-family: neueBlack;
     font-size: 30px;
     margin-bottom: 30px;
     max-width: 360px;
 }
 
-.card-con .card-text .card-para {
+.cards-aboutus-container .cards-aboutus-text .card-aboutus-para {
     color: #505050;
     font-family: neueThin;
     font-weight: 900;
@@ -150,19 +150,19 @@
         width: 80%;
     }
 
-    /* cards section */
+    /* cards-aboutus section */
 
-    .cards {
+    .cards-aboutus {
         flex-direction: column;
         gap: 60px;
         padding: 60px;
     }
 
-    .cards .card-con {
+    .cards-aboutus .cards-aboutus-container {
         width: 100%;
     }
 
-    .card-con .card-text {
+    .cards-aboutus-container .cards-aboutus-text {
         padding: 20px;
         display: flex;
         align-items: center;
@@ -171,11 +171,11 @@
         text-align: center;
     }
 
-    .cards .mission-card {
+    .cards-aboutus .mission-card {
         padding-bottom: 0px;
     }
 
-    .card-con .card-text .card-head {
+    .cards-aboutus-container .cards-aboutus-text .card-aboutus-head {
         margin-bottom: 20px;
     }
 }
@@ -212,23 +212,23 @@
         width: 90%;
     }
 
-    /* cards section */
+    /* cards-aboutus section */
 
-    .cards {
+    .cards-aboutus {
         flex-direction: column;
         gap: 50px;
         padding: 30px;
     }
 
-    .cards .card-con {
+    .cards-aboutus .cards-aboutus-container {
         width: 100%;
     }
 
-    .cards .mission-card {
+    .cards-aboutus .mission-card {
         padding-bottom: 0px;
     }
 
-    .card-con .card-text {
+    .cards-aboutus-container .cards-aboutus-text {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -237,13 +237,13 @@
         text-align: center;
     }
 
-    .card-con .card-text .card-head {
+    .cards-aboutus-container .cards-aboutus-text .card-aboutus-head {
         font-size: 20px;
         margin-bottom: 20px;
         max-width: 360px;
     }
 
-    .card-con .card-text .card-para {
+    .cards-aboutus-container .cards-aboutus-text .card-aboutus-para {
         font-size: 14px;
         font-weight: 900;
         max-width: 500px;
